# linguatron

./: Linguatron.cabal  LinguatronComputation.hs  README  README.md  demo.html  demo.js  html5-canvas-drawing-app.js  index.html  linguatron.hs  linguatron.js  main.css  main.js  training.html  training.js
